// ============================================================
// Emochi App — Database Schema (DBML)
// View at https://dbdiagram.io or https://dbdocs.io
// ============================================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username text [not null, unique]
  email text [not null, unique]
  personality_type text [note: "e.g. ENFP, set after onboarding quiz"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table interests {
  id integer [pk, increment]
  name text [not null, unique, note: "e.g. Reading, Gaming, Fitness, Cooking, Travel"]
}

Table user_interests {
  user_id uuid [not null, ref: > users.id]
  interest_id integer [not null, ref: > interests.id]

  indexes {
    (user_id, interest_id) [pk]
  }
}

Table emochi_types {
  id integer [pk, increment]
  name text [not null, note: "Cheer, Fear, Buzzy, Tear, Zen, Gabby, Dozy, Wisey"]
  avatar url
  is_scored boolean [not null, default: true, note: "false only for Wisey (Judge)"]
}

Table user_emochi_scores {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  emochi_id integer [not null, ref: > emochi_types.id]
  score integer [not null, default: 50, note: "0-100"]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, emochi_id) [unique]
  }
}

Table daily_checkin {
  user_id uuid [pk, ref: > users.id, note: "one row per user - overwritten daily, no history kept"]
  checkin_date date [not null, note: "the day this data applies to"]
  sleep_hours decimal(4,1)
  work_hours decimal(4,1)
  feelings text[] [note: "up to 2 values, e.g. {Happy, Tired} - replaced on each check-in"]
  updated_at timestamptz [not null, default: `now()`]
}

Table memories {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  title text [not null]
  situation text
  outcome text
  created_at timestamptz [not null, default: `now()`]
}

Table meetings {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  prompt text [not null]
  personality_snapshot text [note: "personalityType at time of meeting"]
  verdict text [note: "Judge's final verdict"]
  created_at timestamptz [not null, default: `now()`]
}

Table meeting_debate {
  id uuid [pk, default: `gen_random_uuid()`]
  meeting_id uuid [not null, ref: > meetings.id]
  emochi_id integer [not null, ref: > emochi_types.id]
  message text [not null]
  order_index integer [not null, note: "position in the debate"]
}

Table meeting_memory_links {
  meeting_id uuid [not null, ref: > meetings.id]
  memory_id uuid [not null, ref: > memories.id]

  indexes {
    (meeting_id, memory_id) [pk]
  }
}

Table outcome_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  meeting_id uuid [ref: > meetings.id, note: "nullable - outcome can be logged standalone"]
  situation text [not null]
  result text [not null, note: "Positive | Neutral | Negative"]
  reflection text
  created_at timestamptz [not null, default: `now()`]
}
